--- a/FMML_CLF1_Lab2_2022.ipynb
+++ b/FMML_CLF1_Lab2_2022.ipynb
@@ -1972,7 +1972,7 @@
         "\n",
         "4.As the comparision happens everytime when we try to predict a class so if the dataset is large it will take a considerable amount of time.\n",
         "\n",
-        "5.Also KNN is sensitive to scale of data\n",
+        "5.Also KNN is sensitive to scale of data.\n",
         "\n",
         "6.The algorithm depends on the value of K to much, if k is too small the output gets affected by outliers and if too large then the surrounding may include too many points from other classes.\n"
       ],
